# FFmpeg-Android

./: .gitattributes  README.md  build.gradle  gradle.properties  settings.gradle
ffmpeg-android/: CMakeLists.txt  build.gradle
ffmpeg-android/src/androidTest/java/com/eugene_lutz/ffmpeg_android/: ExampleInstrumentedTest.java
ffmpeg-android/src/main/: AndroidManifest.xml
ffmpeg-android/src/main/cpp/: ExecuteResult.cpp  ExecuteResult.hpp  IndexMap.h  IndexMap.hpp  avcodec-av_codec.cpp  avcodec-av_codec_context.cpp  avcodec-av_codec_descriptor.cpp  avcodec-av_codec_parameters.cpp  avcodec-av_packet.cpp  avcodec-helper.cpp  avcodec-helper.h  avcodec-helper.hpp  avdevice-av_device.cpp  avdevice-av_device_info.cpp  avdevice-av_device_info_list.cpp  avdevice-av_device_rect.cpp  avdevice-helper.cpp  avdevice-helper.h  avdevice-helper.hpp  avfilter-av_filter.cpp  avfilter-av_filter_context.cpp  avfilter-av_filter_graph.cpp  avfilter-av_filter_in_out.cpp  avfilter-av_filter_link.cpp  avfilter-av_filter_pad.cpp  avfilter-helper.cpp  avfilter-helper.h  avfilter-helper.hpp  avformat-av_format_context.cpp  avformat-av_input_format.cpp  avformat-av_io.cpp  avformat-av_io_context.cpp  avformat-av_output_format.cpp  avformat-av_stream.cpp  avformat-helper.h  avformat-helper.hpp  avutil-av_buffer_ref.cpp  avutil-av_class.cpp  avutil-av_dictionary.cpp  avutil-av_dictionary_entry.cpp  (+22 more)
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/: CStructWrapper.java  ExecuteResult.java  FFmpegAndroid.java  FFmpegUtil.java  IndexMap.java  OpaqueIterator.java  TemplateCStructWraper.java
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/avcodec/: AVCodec.java  AVCodecContext.java  AVCodecDescriptor.java  AVCodecHelper.java  AVCodecID.java  AVCodecParameters.java  AVPacket.java
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/avdevice/: AVDevice.java  AVDeviceInfo.java  AVDeviceInfoList.java  AVDeviceRect.java
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/avfilter/: AVFilter.java  AVFilterCommand.java  AVFilterContext.java  AVFilterGraph.java  AVFilterInOut.java  AVFilterLink.java  AVFilterPad.java
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/avformat/: AVFormat.java  AVFormatContext.java  AVIO.java  AVIOContext.java  AVInputFormat.java  AVOutputFormat.java  AVStream.java
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/avutil/: AVBufferRef.java  AVChromaLocation.java  AVClass.java  AVClassCategory.java  AVColorPrimaries.java  AVColorRange.java  AVColorSpace.java  AVColorTransferCharacteristic.java  AVDictionary.java  AVDictionaryEntry.java  AVFrame.java  AVFrameSideDataType.java  AVMediaType.java  AVPictureType.java  AVPixelFormat.java  AVRational.java  AVRounding.java  AVSampleFormat.java  AVUtil.java  AVUtilHelper.java  Mathematics.java  RawData.java
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/swresample/: SwrContext.java  SwrDitherType.java  SwrEngine.java  SwrFilterType.java
ffmpeg-android/src/main/java/com/eugene_lutz/ffmpeg_android/swscale/: SwScale.java  SwsContext.java  SwsFilter.java  SwsVector.java
ffmpeg-android/src/main/jniLibs/ffmpeg/x86/include/libavutil/: ffversion.h
ffmpeg-android/src/test/java/com/eugene_lutz/ffmpeg_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
testapplication/: build.gradle
testapplication/src/androidTest/java/com/eugene_lutz/testapplication/: AVCodecLibraryTests.java  AVCodecTests.java  AVDictionaryTests.java  AVUtilTests.java  ExampleInstrumentedTest.java
testapplication/src/main/: AndroidManifest.xml
testapplication/src/main/java/com/eugene_lutz/testapplication/: FFmpegTest.java  MainActivity.java  RemuxingSample.java  Util.java
testapplication/src/test/java/com/eugene_lutz/testapplication/: ExampleUnitTest.java
